# BEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: BTime.cpp  BTime.h  asserts.h  logger.cpp  logger.h  main.cpp  window.cpp  window.h
